--- a/controller_interface/CMakeLists.txt
+++ b/controller_interface/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(controller_interface)
 
-find_package(catkin REQUIRED COMPONENTS genmsg)
+find_package(catkin REQUIRED)
 find_package(Boost REQUIRED COMPONENTS thread)
 
 catkin_package()
