--- a/controller_manager_msgs/CMakeLists.txt
+++ b/controller_manager_msgs/CMakeLists.txt
@@ -6,11 +6,6 @@ find_package(Boost REQUIRED COMPONENTS thread)
 
 catkin_package()
 
-add_service_files(DIRECTORY srv FILES ListControllers.srv)
+add_service_files(DIRECTORY srv FILES ListControllers.srv LoadController.srv UnloadController.srv SwitchController.srv)
 generate_messages()
 
-
-# install the include folder
-install(DIRECTORY include/${PROJECT_NAME}/
-        DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
-)
