--- a/controller_manager/CMakeLists.txt
+++ b/controller_manager/CMakeLists.txt
@@ -1,13 +1,7 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(controller_manager)
 
-find_package(catkin REQUIRED COMPONENTS genmsg)
-find_package(Boost REQUIRED COMPONENTS thread)
+include(/home/wim/stacks/groovy/catkin_easy/catkin_easy.cmake NO_POLICY_SCOPE)
+catkin_basic(INCLUDE include LIBRARIES ${PROJECT_NAME})
 
-catkin_package()
-
-
-# install the include folder
-install(DIRECTORY include/${PROJECT_NAME}/
-        DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
-)
+add_library(${PROJECT_NAME} SHARED src/controller_manager.cpp)
+target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES} ${catkin_LIBRARIES})
