--- a/controller_manager/package.xml
+++ b/controller_manager/package.xml
@@ -9,6 +9,13 @@
   <license>BSD</license>
   <url>http://ros.org/wiki/controller_manager</url>
 
+  <build_depend>controller_interface</build_depend>
   <build_depend>catkin</build_depend>
   <build_depend>controller_manager_msgs</build_depend>
+  <build_depend>hardware_interface</build_depend>
+  <build_depend>realtime_utils</build_depend>
+
+  <run_depend>controller_manager_msgs</run_depend>
+  <run_depend>controller_interface</run_depend>
+  <run_depend>hardware_interface</run_depend>
 </package>
