--- a/controller_manager_msgs/CMakeLists.txt
+++ b/controller_manager_msgs/CMakeLists.txt
@@ -1,11 +1,4 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(controller_manager_msgs)
 
-find_package(catkin REQUIRED COMPONENTS genmsg)
-find_package(Boost REQUIRED COMPONENTS thread)
-
-catkin_package()
-
-add_service_files(DIRECTORY srv FILES ListControllers.srv LoadController.srv UnloadController.srv SwitchController.srv)
-generate_messages()
-
+include(/home/wim/stacks/groovy/catkin_easy/catkin_easy.cmake NO_POLICY_SCOPE)
+catkin_basic()
