--- a/realtime_utils/package.xml
+++ b/realtime_utils/package.xml
@@ -1,19 +1,18 @@
 <package>
-  <name>controller_interface</name>
+  <name>realtime_utils</name>
   <version>0.0.1</version>
   <description>
-    Interface base class for controllers
+    Utilities for realtime systems
   </description>
   <author>Wim Meeussen</author>
   <maintainer email="wim@hidof.com">Wim Meeussen</maintainer>
   <license>BSD</license>
-  <url>http://ros.org/wiki/controller_interface</url>
+  <url>http://ros.org/wiki/realtime_utils</url>
 
   <build_depend>catkin</build_depend>
   <build_depend>roscpp</build_depend>
-  <build_depend>hardware_interface</build_depend>
+  <build_depend>rospy</build_depend>
 
   <run_depend>roscpp</run_depend>
-  <run_depend>hardware_interface</run_depend>
-
+  <run_depend>rospy</run_depend>
 </package>
