--- a/joint_state_controller/CMakeLists.txt
+++ b/joint_state_controller/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8.3)
 
 include(/home/wim/stacks/groovy/catkin_easy/catkin_easy.cmake NO_POLICY_SCOPE)
-catkin_basic(INCLUDE include)
+catkin_basic(INCLUDE include LIBRARIES joint_state_controller)
 
-add_library(dummy_controller SHARED src/dummy_controller.cpp)
-target_link_libraries(dummy_controller ${Boost_LIBRARIES} ${catkin_LIBRARIES})
+add_library(joint_state_controller SHARED src/joint_state_controller.cpp)
+target_link_libraries(joint_state_controller ${Boost_LIBRARIES} ${catkin_LIBRARIES})
