--- a/joint_state_controller/CMakeLists.txt
+++ b/joint_state_controller/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8.3)
 
-include(/home/wim/stacks/groovy/catkin_easy/catkin_easy.cmake NO_POLICY_SCOPE)
+include(../catkin_basic.cmake NO_POLICY_SCOPE)
 catkin_basic(INCLUDE include LIBRARIES joint_state_controller)
 
 add_library(joint_state_controller SHARED src/joint_state_controller.cpp)
