--- a/controller_manager/CMakeLists.txt
+++ b/controller_manager/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8.3)
 
-include(/home/wim/stacks/groovy/catkin_easy/catkin_easy.cmake NO_POLICY_SCOPE)
+include(../catkin_basic.cmake NO_POLICY_SCOPE)
 catkin_basic(INCLUDE include LIBRARIES controller_manager)
 
 add_library(controller_manager SHARED src/controller_manager.cpp)
