--- a/realtime_utils/CMakeLists.txt
+++ b/realtime_utils/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required(VERSION 2.8.3)
 
-include(../catkin_basic.cmake NO_POLICY_SCOPE)
+find_package(catkin_basic REQUIRED)
 catkin_basic(INCLUDE include)
