--- a/controller_manager/CMakeLists.txt
+++ b/controller_manager/CMakeLists.txt
@@ -1,10 +1,14 @@
-cmake_minimum_required(VERSION 2.8.3)
+cmake_minimum_required(VERSION 2.4.6)
+include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
 
-find_package(catkin_basic REQUIRED)
-catkin_basic(INCLUDE include LIBRARIES controller_manager)
+# Set the build type.  Options are:
+#  Coverage       : w/ debug symbols, w/o optimization, w/ code-coverage
+#  Debug          : w/ debug symbols, w/o optimization
+#  Release        : w/o debug symbols, w/ optimization
+#  RelWithDebInfo : w/ debug symbols, w/ optimization
+#  MinSizeRel     : w/o debug symbols, w/ optimization, stripped binaries
+#set(ROS_BUILD_TYPE RelWithDebInfo)
 
-add_library(controller_manager SHARED src/controller_manager.cpp)
-target_link_libraries(controller_manager ${Boost_LIBRARIES} ${catkin_LIBRARIES})
+rosbuild_init()
 
-add_executable(dummy_cm src/dummy.cpp)
-target_link_libraries(dummy_cm controller_manager ${Boost_LIBRARIES} ${catkin_LIBRARIES})
+rosbuild_add_library(${PROJECT_NAME} src/controller_manager.cpp)
