--- a/joint_state_controller/CMakeLists.txt
+++ b/joint_state_controller/CMakeLists.txt
@@ -1,10 +1,20 @@
-cmake_minimum_required(VERSION 2.8.3)
+cmake_minimum_required(VERSION 2.4.6)
+include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
 
-find_package(catkin_basic REQUIRED)
-catkin_basic(INCLUDE include LIBRARIES joint_state_controller)
+# Set the build type.  Options are:
+#  Coverage       : w/ debug symbols, w/o optimization, w/ code-coverage
+#  Debug          : w/ debug symbols, w/o optimization
+#  Release        : w/o debug symbols, w/ optimization
+#  RelWithDebInfo : w/ debug symbols, w/ optimization
+#  MinSizeRel     : w/o debug symbols, w/ optimization, stripped binaries
+#set(ROS_BUILD_TYPE RelWithDebInfo)
 
-add_library(joint_state_controller SHARED src/joint_state_controller.cpp)
-target_link_libraries(joint_state_controller ${Boost_LIBRARIES} ${catkin_LIBRARIES})
+rosbuild_init()
 
-add_executable(dummy_controller src/dummy.cpp)
-target_link_libraries(dummy_controller joint_state_controller ${Boost_LIBRARIES} ${catkin_LIBRARIES})
+set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
+set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
+
+rosbuild_add_library(${PROJECT_NAME} src/joint_state_controller.cpp)
+
+rosbuild_add_executable(dummy_controller src/dummy.cpp)
+target_link_libraries(dummy_controller ${PROJECT_NAME})
