--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ controller_manager_msgs/src/controller_manager_msgs/msg/*
 controller_manager_msgs/src/controller_manager_msgs/srv/*
 controller_manager_msgs/src/controller_manager_msgs/__init__.py
 *.pyc
+qtcreator-build-*
