--- a/controller_manager_tests/CMakeLists.txt
+++ b/controller_manager_tests/CMakeLists.txt
@@ -24,6 +24,7 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 #common commands for building c++ executables and libraries
 rosbuild_add_library(${PROJECT_NAME} src/my_robot_hw.cpp              include/controller_manager_tests/my_robot_hw.h
                                      src/effort_test_controller.cpp   include/controller_manager_tests/effort_test_controller.h
+                                     src/my_dummy_controller.cpp      include/controller_manager_tests/my_dummy_controller.h
                     )
 #target_link_libraries(${PROJECT_NAME} another_library)
 #rosbuild_add_boost_directories()
