--- a/controller_manager/CMakeLists.txt
+++ b/controller_manager/CMakeLists.txt
@@ -11,4 +11,4 @@ include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
 
 rosbuild_init()
 
-rosbuild_add_library(${PROJECT_NAME} src/controller_manager.cpp)
+rosbuild_add_library(${PROJECT_NAME} src/controller_manager.cpp include/controller_manager/controller_manager.h)
