--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ controller_manager_msgs/src/controller_manager_msgs/srv/*
 controller_manager_msgs/src/controller_manager_msgs/__init__.py
 *.pyc
 qtcreator-build-*
+CMakeLists.txt.user
