--- a/transmission_interface/rosdoc.yaml
+++ b/transmission_interface/rosdoc.yaml
@@ -2,5 +2,5 @@
   name: C++ API
   output_dir: c++
   file_patterns: '*.c *.cpp *.h *.cc *.hh *.dox'
-  excludes: 'test msg_gen'
+  exclude_patterns: 'test'
   image_path: images
