--- a/controller_manager/rosdoc.yaml
+++ b/controller_manager/rosdoc.yaml
@@ -1,5 +1,5 @@
 - builder: doxygen
   name: C++ API
   output_dir: c++
-  file_patters: '*.c *.cpp *.h *.cc *.hh *.dox'
+  file_patterns: '*.c *.cpp *.h *.cc *.hh *.dox'
   excludes: 'msg_gen'
