--- a/controller_manager/CMakeLists.txt
+++ b/controller_manager/CMakeLists.txt
@@ -1,16 +1,26 @@
-cmake_minimum_required(VERSION 2.4.6)
-include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
+# http://ros.org/doc/groovy/api/catkin/html/user_guide/supposed.html
+cmake_minimum_required(VERSION 2.8.3)
+project(controller_manager)
+# Load catkin and all dependencies required for this package
+# TODO: remove all from COMPONENTS that are not catkin packages.
+find_package(catkin REQUIRED COMPONENTS controller_interface controller_manager_msgs hardware_interface realtime_tools pluginlib)
 
-# Set the build type.  Options are:
-#  Coverage       : w/ debug symbols, w/o optimization, w/ code-coverage
-#  Debug          : w/ debug symbols, w/o optimization
-#  Release        : w/o debug symbols, w/ optimization
-#  RelWithDebInfo : w/ debug symbols, w/ optimization
-#  MinSizeRel     : w/o debug symbols, w/ optimization, stripped binaries
-#set(ROS_BUILD_TYPE RelWithDebInfo)
+include_directories(include ${Boost_INCLUDE_DIR} ${catkin_INCLUDE_DIRS})
 
-rosbuild_init()
+add_library(${PROJECT_NAME}
+  src/controller_manager.cpp
+  include/controller_manager/controller_manager.h
+  include/controller_manager/controller_loader_interface.h
+  include/controller_manager/controller_loader.h)
 
-rosbuild_add_library(${PROJECT_NAME} src/controller_manager.cpp include/controller_manager/controller_manager.h
-                                     include/controller_manager/controller_loader_interface.h
-                                     include/controller_manager/controller_loader.h)
+# TODO: fill in what other packages will need to use this package
+## DEPENDS: system dependencies of this project that dependent projects also need
+## CATKIN_DEPENDS: catkin_packages dependent projects also need
+## INCLUDE_DIRS: 
+## LIBRARIES: libraries you create in this project that dependent projects also need
+catkin_package(
+    DEPENDS controller_interface controller_manager_msgs hardware_interface realtime_tools pluginlib
+    CATKIN_DEPENDS # TODO
+    INCLUDE_DIRS include
+    LIBRARIES ${PROJECT_NAME}
+)
