Fixing library export

--- a/control_toolbox/CMakeLists.txt
+++ b/control_toolbox/CMakeLists.txt
@@ -39,7 +39,7 @@ catkin_package(
     DEPENDS rosconsole tf roscpp angles tinyxml
     CATKIN_DEPENDS # TODO
     INCLUDE_DIRS include
-    LIBRARIES # TODO
+    LIBRARIES control_toolbox
 )
 
 # Tests
