--- a/hardware_interface/CMakeLists.txt
+++ b/hardware_interface/CMakeLists.txt
@@ -10,9 +10,14 @@ else()
 
   find_package(catkin REQUIRED COMPONENTS roscpp)
 
+  # Declare catkin package
   catkin_package(
     CATKIN_DEPENDS roscpp
     INCLUDE_DIRS include
     )
+
+  # Install
+  install(DIRECTORY include/${PROJECT_NAME}/
+    DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION})
 
 endif()
