--- a/transmission_interface/CMakeLists.txt
+++ b/transmission_interface/CMakeLists.txt
@@ -42,4 +42,8 @@ else()
   #target_link_libraries(four_bar_linkage_transmission_test pthread)
   #target_link_libraries(transmission_interface_test        pthread)
 
+  # Install
+  install(DIRECTORY include/${PROJECT_NAME}/
+    DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION})
+
 endif()
