--- a/hardware_interface/CMakeLists.txt
+++ b/hardware_interface/CMakeLists.txt
@@ -11,4 +11,20 @@ include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
 
 rosbuild_init()
 
-#rosbuild_add_library(${PROJECT_NAME} src/dummy_interface.cpp)
+#set the default path for built executables to the "bin" directory
+set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
+#set the default path for built libraries to the "lib" directory
+set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
+
+rosbuild_add_gtest(resource_manager_test           test/resource_manager_test.cpp)
+rosbuild_add_gtest(actuator_state_interface_test   test/actuator_state_interface_test.cpp)
+rosbuild_add_gtest(actuator_command_interface_test test/actuator_command_interface_test.cpp)
+rosbuild_add_gtest(joint_state_interface_test      test/joint_state_interface_test.cpp)
+rosbuild_add_gtest(joint_command_interface_test    test/joint_command_interface_test.cpp)
+
+# TODO: why is it explicitly needed???, without it the linker fails.
+target_link_libraries(resource_manager_test           pthread)
+target_link_libraries(actuator_state_interface_test   pthread)
+target_link_libraries(actuator_command_interface_test pthread)
+target_link_libraries(joint_state_interface_test      pthread)
+target_link_libraries(joint_command_interface_test    pthread)
