--- a/hardware_interface/rosdoc.yaml
+++ b/hardware_interface/rosdoc.yaml
@@ -2,4 +2,4 @@
   name: C++ API
   output_dir: c++
   file_patterns: '*.c *.cpp *.h *.cc *.hh *.dox'
-  excludes: 'msg_gen'
+  exclude_patterns: 'test'
