--- a/controller_manager/CMakeLists.txt
+++ b/controller_manager/CMakeLists.txt
@@ -26,6 +26,8 @@ else()
     include/controller_manager/controller_loader_interface.h
     include/controller_manager/controller_loader.h)
 
+  add_dependencies(${PROJECT_NAME} ${catkin_EXPORTED_TARGETS})
+
   # Declare catkin package
   catkin_package(
     DEPENDS boost
