Install tune_pid.py under catkin.

--- a/control_toolbox/CMakeLists.txt
+++ b/control_toolbox/CMakeLists.txt
@@ -77,4 +77,7 @@ else()
     RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
     )
 
+  install(DIRECTORY scripts/
+     DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
+
 endif()
