--- a/tracks.yaml
+++ b/tracks.yaml
@@ -1,1 +1,20 @@
-tracks: {}
+tracks:
+  hydro:
+    actions:
+    - bloom-export-upstream :{vcs_local_uri} :{vcs_type} --tag :{release_tag} --display-uri
+      :{vcs_uri} --name :{name} --output-dir :{archive_dir_path}
+    - git-bloom-import-upstream :{archive_path} :{patches} --release-version :{version}
+      --replace
+    - git-bloom-generate -y rosrelease :{ros_distro} --source upstream -i :{release_inc}
+    - git-bloom-generate -y rosdebian --prefix release/:{ros_distro} :{ros_distro}
+      -i :{release_inc}
+    devel_branch: hydro-devel
+    name: upstream
+    patches: null
+    release_inc: -1
+    release_repo_url: git@github.com:ros-controls/ros_control.git
+    release_tag: :{version}
+    ros_distro: hydro
+    vcs_type: git
+    vcs_uri: https://github.com/ros-controls/ros_control.git
+    version: :{auto}
