adding install targets for plugin xml files

--- a/controller_manager_tests/CMakeLists.txt
+++ b/controller_manager_tests/CMakeLists.txt
@@ -66,4 +66,7 @@ else()
     ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
     LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION})
 
+  install(FILES test_controllers_plugin.xml
+    DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
+
 endif()
