Add joint limits parsing from rosparam + unit test.

--- a/joint_limits_interface/CMakeLists.txt
+++ b/joint_limits_interface/CMakeLists.txt
@@ -12,9 +12,14 @@ if(USE_ROSBUILD)
   rosbuild_add_gtest(joint_limits_interface_test test/joint_limits_interface_test.cpp)
   rosbuild_add_gtest(joint_limits_urdf_test      test/joint_limits_urdf_test.cpp)
 
+  rosbuild_add_executable(joint_limits_rosparam_test test/joint_limits_rosparam_test.cpp)
+  rosbuild_add_gtest_build_flags(joint_limits_rosparam_test)
+  rosbuild_add_rostest(test/joint_limits_rosparam.test)
+
   # TODO: why is it explicitly needed???, without it the linker fails.
   target_link_libraries(joint_limits_interface_test pthread)
   target_link_libraries(joint_limits_urdf_test      pthread)
+  target_link_libraries(joint_limits_rosparam_test  pthread)
 
 else()
 
@@ -28,6 +33,8 @@ else()
 
   catkin_add_gtest(joint_limits_interface_test test/joint_limits_interface_test.cpp)
   catkin_add_gtest(joint_limits_urdf_test      test/joint_limits_urdf_test.cpp)
+  catkin_add_gtest(joint_limits_rosparam_test  test/joint_limits_urdf_test.cpp)
+  add_rostest(test/joint_limits_rosparam.test)
 
   # Install
   install(DIRECTORY include/${PROJECT_NAME}/
