build dependency rostest added to package.xml and rostest added to CMakeLists.txt

--- a/joint_limits_interface/package.xml
+++ b/joint_limits_interface/package.xml
@@ -11,6 +11,7 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
+  <build_depend>rostest</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>hardware_interface</build_depend>
   <build_depend>urdf_interface</build_depend>
