--- a/joint_limits_interface/package.xml
+++ b/joint_limits_interface/package.xml
@@ -14,6 +14,7 @@
   <build_depend>roscpp</build_depend>
   <build_depend>hardware_interface</build_depend>
   <build_depend>urdf_interface</build_depend>
+  <build_depend>rostest</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>hardware_interface</run_depend>
