--- a/transmission_interface/package.xml
+++ b/transmission_interface/package.xml
@@ -2,7 +2,9 @@
   <name>transmission_interface</name>
   <version>0.5.0</version>
   <description>Transmission Interface.</description>
+
   <maintainer email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodriguez Tsouroukdissian</maintainer>
+  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>
 
   <license>Modified BSD</license>
 
