Allow multiple hw interfaces, Fix #112, and test.
- Allow to specify multiple hardware interfaces for joints and actuators.

- Fix invalid xml_element tag. Contents are now stored as a string.

- Unit test parser.

--- a/transmission_interface/CMakeLists.txt
+++ b/transmission_interface/CMakeLists.txt
@@ -12,12 +12,27 @@ if(USE_ROSBUILD)
 
   # Transmission Paraser Library
   rosbuild_add_library(${PROJECT_NAME}_parser src/transmission_parser.cpp)
-  target_link_libraries(${PROJECT_NAME}_parser)
+
+  rosbuild_add_library(transmission_interface_loader
+    src/transmission_loader.cpp           include/transmission_interface/transmission_loader.h
+    src/simple_transmission_loader.cpp    include/transmission_interface/simple_transmission_loader.h
+    src/transmission_interface_loader.cpp include/transmission_interface/transmission_interface_loader.h)
+
+  rosbuild_add_library(simple_transmission_loader src/simple_transmission_loader.cpp)
+  target_link_libraries(simple_transmission_loader           transmission_interface_loader)
 
   rosbuild_add_gtest(simple_transmission_test           test/simple_transmission_test.cpp)
   rosbuild_add_gtest(differential_transmission_test     test/differential_transmission_test.cpp)
   rosbuild_add_gtest(four_bar_linkage_transmission_test test/four_bar_linkage_transmission_test.cpp)
   rosbuild_add_gtest(transmission_interface_test        test/transmission_interface_test.cpp)
+  rosbuild_add_gtest(transmission_parser_test           test/transmission_parser_test.cpp)
+  rosbuild_add_gtest(simple_transmission_loader_test    test/simple_transmission_loader_test.cpp)
+  rosbuild_add_gtest(transmission_interface_loader_test test/transmission_interface_loader_test.cpp)
+
+  target_link_libraries(transmission_parser_test           ${PROJECT_NAME}_parser)
+  target_link_libraries(simple_transmission_loader_test    ${PROJECT_NAME}_parser)
+  target_link_libraries(transmission_interface_loader_test ${PROJECT_NAME}_parser
+                                                           transmission_interface_loader)
 
   # TODO: why is it explicitly needed???, without it linker fails.
   target_link_libraries(simple_transmission_test           pthread)
@@ -31,6 +46,7 @@ else()
   find_package(catkin REQUIRED
     hardware_interface
     cmake_modules
+    resource_retriever
   )
 
   # Include a custom cmake file for TinyXML
@@ -44,6 +60,7 @@ else()
       include
     DEPENDS
       TinyXML
+      resource_retriever
   )
 
 ###########
@@ -90,6 +107,9 @@ else()
   catkin_add_gtest(four_bar_linkage_transmission_test test/four_bar_linkage_transmission_test.cpp)
   catkin_add_gtest(transmission_interface_test        test/transmission_interface_test.cpp)
   target_link_libraries(transmission_interface_test ${catkin_LIBRARIES} ${TinyXML_LIBRARIES})
+
+  catkin_add_gtest(transmission_parser_test           test/transmission_parser_test.cpp)
+  target_link_libraries(transmission_parser_test   ${PROJECT_NAME}_parser)
 
 
 endif()
