--- a/transmission_interface/CMakeLists.txt
+++ b/transmission_interface/CMakeLists.txt
@@ -43,10 +43,23 @@ target_link_libraries(${PROJECT_NAME}_parser ${catkin_LIBRARIES} ${TinyXML_LIBRA
 # Transmission loader library
 add_library(transmission_interface_loader
   src/transmission_loader.cpp           include/transmission_interface/transmission_loader.h
-  src/simple_transmission_loader.cpp    include/transmission_interface/simple_transmission_loader.h
   src/transmission_interface_loader.cpp include/transmission_interface/transmission_interface_loader.h
 )
-target_link_libraries(transmission_interface_loader ${catkin_LIBRARIES} ${TinyXML_LIBRARIES})
+target_link_libraries(transmission_interface_loader
+  ${PROJECT_NAME}_parser
+  ${catkin_LIBRARIES}
+  ${TinyXML_LIBRARIES})
+
+
+add_library(transmission_interface_loader_plugins
+  src/simple_transmission_loader.cpp           include/transmission_interface/simple_transmission_loader.h
+  src/differential_transmission_loader.cpp     include/transmission_interface/differential_transmission_loader.h
+  src/four_bar_linkage_transmission_loader.cpp include/transmission_interface/four_bar_linkage_transmission_loader.h
+  src/joint_state_interface_provider.cpp       include/transmission_interface/joint_state_interface_provider.h
+  src/position_joint_interface_provider.cpp    include/transmission_interface/position_joint_interface_provider.h
+  src/velocity_joint_interface_provider.cpp    include/transmission_interface/velocity_joint_interface_provider.h
+  src/effort_joint_interface_provider.cpp      include/transmission_interface/effort_joint_interface_provider.h)
+target_link_libraries(transmission_interface_loader_plugins transmission_interface_loader)
 
 
 #############
